XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Refactored scriptlet API classes to make them testable
  (friebe)

Features
~~~~~~~~
- Added various with*() methods to xml.Stylesheet to complement their
  add*() counterparts - but instead return the stylesheet instance to
  allow for a fluent API.
  (friebe)
- Changed scriptlet error pages to use data protocol instead of relying
  on an image named "err.gif" in the document root's /image subdirectory
  (friebe)
- Added rdbms.finder.FinderMethod::getFinder() method
  (friebe)
- Added getInputStream() and getOutputStream() methods to io.File
  (friebe)
- Added getInputStream() and getOutputStream() methods to peer.Socket
  (friebe)
- Added possibility to pass an associative array to HTTP request params
  (friebe)

Bugfixes
~~~~~~~~
- Fixed XPath constructor to include XML declaration when creating XPath
  object from xml.Tree
  (hinckel, Christine Karch)


Version 5.7.4, released 2009-09-05
----------------------------------
SVN version: 13480

Heads up!
~~~~~~~~~
- Deprecated peer.ftp.server.FtpConnectionListener class
  http://news.xp-framework.net/article/309/2009/08/19/
  (friebe)
- Refactored rdbms.pgsql.PostgreSQLConnection class so it behaves in 
  line with other rdbms.DBConnection classes - this includes 
  behavorial changes visible to outside
  (kiesel)
- Made util.Locale fully qualified, to make XP forward compatible
  with PHP 5.3.0 with ext/intl enabled
  (kiesel)
- Changed "unittest" command to exit with non-zero exitcode if either no
  tests are found or any test fails
  (friebe)
- Changed ClassDoc::sourceFile() and PackageDoc::sourceFile() in 
  text.doclet to return io.File objects instead of strings
  (friebe)
- Refactored scriptlet.workflow.casters.ToValidXMLString into the
  checker scriptlet.workflow.checkers.WellformedXMLChecker